Fix content shift due to fontawesome

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -35,3 +35,8 @@ a:hover, a:focus {
 .anchor-wrapper:hover .octicon, .anchor-wrapper:focus .octicon {
     visibility: visible;
 }
+
+i.fa-fw {
+    min-width: 1.25em;
+    display: inline-block;
+}
